bin/testsuite/tests/compiler/src/errors/compiler4920.swg
#global testerror "Err0367"

#test
{
    foreach {

    }
}